spark mem fix